# mist

./: .editorconfig  .gitignore  build-win.sh  build.sh
engine/: CMakeLists.txt
engine/src/: assertions.h  defines.h  entry.h
engine/src/collections/: array.h  strings.cpp  strings.h
engine/src/core/: application.cpp  application.h  logger.cpp  logger.h  test.cpp  test.h
engine/src/memory/: allocator.cpp  allocator.h  memory.cpp  memory.h
engine/src/platform/: platform.cpp  platform.h  platform_apple.cpp  platform_linux.cpp  platform_unix.cpp  platform_windows.cpp  window.h
engine/src/utils/: utils.cpp  utils.h
testbed/: CMakeLists.txt
testbed/src/: main.cpp
